# pysinter

./: README.rst  pyproject.toml
pysinter/: __init__.py  __main__.py  _dynamic_old.py  constants.py  dynamic.py  helper.py
pysinter/examples/: hello.py  passthrough.py
pysinter/protocol/: protocol-latest.json
tests/: test_parse_format.py
