[tool.poetry]
name = "pysinter"
version = "0.1.0"
description = ""
authors = ["florp <jens.krewald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
janus = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
