[tool.poetry]
name = "pysinter"
version = "0.1.0"
license = "LGPL-3.0-or-later"
description = ""
authors = ["florp <jens.krewald@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
janus = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.pytest.ini_options]
log_cli = 1
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format= "%Y-%m-%d %H:%M:%S"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
